@@ -35,7 +35,8 @@ export(anova.gam, bam, bam.update, concurvity, cSplineDes,
        Predict.matrix.random.effect,
        Predict.matrix.t2.smooth,
        qq.gam,
-       residuals.gam,rig,rTweedie, s,
+       residuals.gam,rig,rTweedie, 
+       Rrank,s,
        slanczos,
        smoothCon,smooth.construct,smooth.construct2,
        smooth.construct.cc.smooth.spec,
