@@ -207,8 +207,8 @@ library(mgcv)
 ## Some examples are marked 'Not run' purely to keep 
 ## checking load on CRAN down. Sample sizes are small for 
 ## the same reason.
-
-dat <- gamSim(1,n=20000,dist="normal",scale=20)
+set.seed(3)
+dat <- gamSim(1,n=15000,dist="normal",scale=20)
 bs <- "cr";k <- 20
 b <- bam(y ~ s(x0,bs=bs,k=k)+s(x1,bs=bs,k=k)+s(x2,bs=bs,k=k)+
            s(x3,bs=bs,k=k),data=dat)
@@ -225,8 +225,8 @@ summary(ba)}
 
 k <- 15
 dat <- gamSim(1,n=11000,dist="poisson",scale=.1)
-system.time(b1 <- bam(y ~ s(x0,bs=bs,k=k)+s(x1,bs=bs,k=k)+s(x2,bs=bs,k=k)+
-            s(x3,bs=bs,k=k),data=dat,family=poisson()))
+system.time(b1 <- bam(y ~ s(x0,bs=bs,k=k)+s(x1,bs=bs,k=k)+s(x2,bs=bs,k=k),
+            data=dat,family=poisson()))
 b1
 
 ## repeat on a cluster (need much larger n to be worthwhile!)
@@ -237,14 +237,14 @@ if (detectCores()>1) { ## no point otherwise
   ## could also use makeForkCluster, but read warnings first!
 } else cl <- NULL
   
-system.time(b2 <- bam(y ~ s(x0,bs=bs,k=k)+s(x1,bs=bs,k=k)+s(x2,bs=bs,k=k)+
-       s(x3,bs=bs,k=k),data=dat,family=poisson(),cluster=cl))
+system.time(b2 <- bam(y ~ s(x0,bs=bs,k=k)+s(x1,bs=bs,k=k)+s(x2,bs=bs,k=k)
+            ,data=dat,family=poisson(),cluster=cl))
 
 ## ... first call has startup overheads, repeat shows speed up...
 
 \dontrun{
-system.time(b2 <- bam(y ~ s(x0,bs=bs,k=k)+s(x1,bs=bs,k=k)+s(x2,bs=bs,k=k)+
-       s(x3,bs=bs,k=k),data=dat,family=poisson(),cluster=cl))
+system.time(b2 <- bam(y ~ s(x0,bs=bs,k=k)+s(x1,bs=bs,k=k)+s(x2,bs=bs,k=k)
+            ,data=dat,family=poisson(),cluster=cl))
 }
 
 fv <- predict(b2,cluster=cl) ## parallel prediction
