@@ -242,7 +242,7 @@ Linked smoothing parameters and adaptive smoothing are not supported.
 library(mgcv)
 ## simple examples using gamm as alternative to gam
 set.seed(0) 
-dat <- gamSim(1,n=400,scale=2)
+dat <- gamSim(1,n=200,scale=2)
 b <- gamm(y~s(x0)+s(x1)+s(x2)+s(x3),data=dat)
 plot(b$gam,pages=1)
 summary(b$lme) # details of underlying lme fit
@@ -257,8 +257,8 @@ par(op)
 rm(dat)
 
 ## Add a factor to the linear predictor, to be modelled as random
-dat <- gamSim(6,n=400,scale=.2,dist="poisson")
-b2<-gamm(y~s(x0)+s(x1)+s(x2)+s(x3),family=poisson,
+dat <- gamSim(6,n=200,scale=.2,dist="poisson")
+b2<-gamm(y~s(x0)+s(x1)+s(x2),family=poisson,
          data=dat,random=list(fac=~1))
 plot(b2$gam,pages=1)
 fac <- dat$fac
@@ -267,7 +267,7 @@ vis.gam(b2$gam)
 
 
 ## now an example with autocorrelated errors....
-n <- 400;sig <- 2
+n <- 200;sig <- 2
 x <- 0:(n-1)/(n-1)
 f <- 0.2*x^11*(10*(1-x))^6+10*(10*x)^3*(1-x)^10
 e <- rnorm(n,0,sig)
@@ -308,9 +308,9 @@ for (i in 1:9) rb <- c(rb,rep(rnorm(4),rep(n.g,4)))
 ## simulate auto-correlated errors within groups
 e<-array(0,0)
 for (i in 1:40) {
-eg <- rnorm(n.g, 0, sig)
-for (j in 2:n.g) eg[j] <- eg[j-1]*0.6+ eg[j]
-e<-c(e,eg)
+  eg <- rnorm(n.g, 0, sig)
+  for (j in 2:n.g) eg[j] <- eg[j-1]*0.6+ eg[j]
+  e<-c(e,eg)
 }
 dat$y <- f + ra + rb + e
 dat$fa <- fa;dat$fb <- fb
@@ -322,7 +322,7 @@ plot(b$gam,pages=1)
 summary(b$gam)
 vis.gam(b$gam)
 ## and a "spatial" example...
-library(nlme);set.seed(1);n <- 200
+library(nlme);set.seed(1);n <- 100
 dat <- gamSim(2,n=n,scale=0) ## standard example
 attach(dat)
 old.par<-par(mfrow=c(2,2))
